--- a/specs.html
+++ b/specs.html
@@ -1,3 +1,10 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
 <p style="color:white;">edit later lol</p>
+<style>
+        body {
+            font-family:Arial;
+            background: #000000;
+            color: cock;
+}
+              <style>
