--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <figure class="wp-block-image size-large is-resized"><a href="https://steamcommunity.com/id/n3nqd" target="_blank" rel=" noreferrer noopener"><img src="steam.gif" alt="steam" class="wp-image-27" width="400" height="400" /><a href="https://twitter.com/n3nqd" target="_blank" rel=" noreferrer noopener"><img src="twitter.gif" alt="twitter" class="wp-image-27" width="250" height="250" /></a></figure>
 <pre style="font-size:300%;color:white;">       steam^         twitter^</pre>
 <p style="color:white;">i still have no idea what to do with this site lmao</p>
-<p style="color:white;href="/specs.html">specs</p>
+<p style="color:white;href="/specs.html">specss</p>
 </main>
 <style>
         body {
