--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
-<figure class="wp-block-image size-large is-resized"><a href="https://steamcommunity.com/id/n3nqd" target="_blank" rel=" noreferrer noopener"><img src="steam.gif" alt="steam" class="wp-image-27" width="400" height="400" /><a href="https://twitter.com/n3nqd" target="_blank" rel=" noreferrer noopener"><img src="twitter.gif" alt="twitter" class="wp-image-27" width="250" height="250" /></a></figure>
+<a href="steamcommunity.com/id/n3nqd">
+<img src="steam.gif" alt="steam" style="width:400px;height:400px;">
+</a>figure> <a href="twitter.com/n3nqd">
+<img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
+</a>
 <pre style="font-size:300%;color:white;">       steam^         twitter^</pre>
 <p style="color:white;">i still have no idea what to do with this site lmao</p>
 <a href="/specs.html">specs</a>
