--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </a>figure> <a href="twitter.com/n3nqd">
 <img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
 </a>
-<pre style="font-size:300%;color:white;">       steam^         twitter^</pre>
+<pre style="font-size:300%;color:white;">       steam         twitter</pre>
 <a href="/specs.html">specs</a>
 </main>
 <style>
