--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <link href="icon.jpg" rel="icon">
 <a href="steamcommunity.com/id/n3nqd">
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
-</a>figure> <a href="twitter.com/n3nqd">
+</a><a href="twitter.com/n3nqd">
 <img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
 </a>
 <pre style="font-size:300%;color:white;">       steam         twitter</pre>
