--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
-<a href="steamcommunity.com/id/n3nqd">
+<a href="https://steamcommunity.com/id/n3nqd">
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
-</a><a href="twitter.com/n3nqd">
+</a><a href="https://twitter.com/n3nqd">
 <img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
 </a>
 <pre style="font-size:300%;color:white;">       steam         twitter</pre>
