--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
 </a><a href="https://twitter.com/n3nqd">
 <img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
+</a><a href="/specs.html">
+<img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
 <pre style="font-size:300%;color:white;">       steam         twitter</pre>
-<a href="/specs.html">specs</a>
 </main>
 <style>
         body {
