--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <a href="https://steamcommunity.com/id/n3nqd">
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
 </a><a href="https://twitter.com/n3nqd">
-<img src="twitter.gif" alt="twitter" style="width:250px;height:250px;">
+<img src="twitter.GIF" alt="twitter" style="width:250px;height:250px;">
 </a><a href="/specs.html">
 <img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
