--- a/specs.html
+++ b/specs.html
@@ -1,6 +1,11 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
-<p style="color:white;">edit later lol</p>
+<img src="pc.gif" alt="real pc lol">
+<pre style="color:white;">CPU:AMD Ryzen 3 3100
+GPU:Radeon RX 570 8GB
+OS:Windows 11 Pro 64-bit
+RAM: 24GB (dont ask)
+MOBO:Gigabyte B450M H</pre>
 <style>
         body {
             font-family:Arial;
