--- a/specs.html
+++ b/specs.html
@@ -1,6 +1,6 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
-<img src="pc.gif" alt="real pc lol">
+<img src="pc.gif" alt="real pc lol" style="width:500px;height:500px;">
 <pre style="color:white;">CPU:AMD Ryzen 3 3100
 GPU:Radeon RX 570 8GB
 OS:Windows 11 Pro 64-bit
