--- a/specs.html
+++ b/specs.html
@@ -1,7 +1,7 @@
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
-<img src="pc.gif" alt="real pc lol" style="width:200px;height:200px;">
-<pre style="color:white;">CPU:AMD Ryzen 3 3100
+<img src="pc.gif" alt="real pc lol">
+<pre style="color:white;font-size:500%;">CPU:AMD Ryzen 3 3100
 GPU:Radeon RX 570 8GB
 OS:Windows 11 Pro 64-bit
 RAM: 24GB (dont ask)
