--- a/specs.html
+++ b/specs.html
@@ -1,4 +1,4 @@
-<title>i  have no idea wtf im doing</title>
+<title>best pc in yugoslavia</title>
 <link href="icon.jpg" rel="icon">
 <img src="pc.gif" alt="real pc lol">
 <pre style="color:white;font-size:500%;">CPU:AMD Ryzen 3 3100
