--- a/specs.html
+++ b/specs.html
@@ -6,6 +6,7 @@ GPU:Radeon RX 570 8GB
 OS:Windows 11 Pro 64-bit
 RAM: 24GB (dont ask)
 MOBO:Gigabyte B450M H</pre>
+<a href="/" title="nah bruh"font-size:300%;</a>
 <style>
         body {
             font-family:Arial;
