--- a/specs.html
+++ b/specs.html
@@ -6,7 +6,7 @@ GPU:Radeon RX 570 8GB
 OS:Windows 11 Pro 64-bit
 RAM: 24GB (dont ask)
 MOBO:Gigabyte B450M H</pre>
-<a href="/" style="color:white;font-size:300%;">get me out of here</a>
+<a href="/" style="color:white;font-size:300%;">nah bruh💀</a>
 <style>
         body {
             font-family:Arial;
