--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </a><a href="/specs.html">
 <img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
+<img src="test.png">
 <pre style="font-size:300%;color:white;">     steam         twitter     specs</pre>
 </main>
 <style>
