--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
 <title>i  have no idea wtf im doing</title>
 <link href="icon.jpg" rel="icon">
 <a href="https://steamcommunity.com/id/n3nqd">
