--- a/specs.html
+++ b/specs.html
@@ -1,3 +1,4 @@
+<meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
 <title>best pc in yugoslavia</title>
 <link href="icon.jpg" rel="icon">
 <img src="pc.gif" alt="real pc lol">
