--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
-<title>i  have no idea wtf im doing</title>
+<title>hi</title>
 <link href="icon.jpg" rel="icon">
 <a href="https://steamcommunity.com/id/n3nqd">
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
