--- a/specs.html
+++ b/specs.html
@@ -1,8 +1,8 @@
 <title>best pc in yugoslavia</title>
 <link href="icon.jpg" rel="icon">
 <img src="pc.gif" alt="real pc lol">
-<pre style="color:white;font-size:350%;">CPU:AMD Ryzen 3 3100
-GPU:Radeon RX 570 8GB
+<pre style="color:white;font-size:350%;">CPU:AMD Ryzen 3 3100 (will upgrade soon(hopefully))
+GPU:ASUS TUF RTX 3060 TI
 OS:Windows 11 Pro 64-bit
 RAM: 24GB (dont ask)
 MOBO:Gigabyte B450M H</pre>
