--- a/specs.html
+++ b/specs.html
@@ -1,7 +1,7 @@
 <title>best pc in yugoslavia</title>
 <link href="icon.jpg" rel="icon">
 <img src="pc.gif" alt="real pc lol">
-<pre style="color:white;font-size:350%;">CPU:AMD Ryzen 3 3100 (will upgrade soon(hopefully))
+<pre style="color:white;font-size:350%;">CPU:AMD Ryzen 7 5700G
 GPU:ASUS TUF RTX 3060 TI
 OS:Windows 11 Pro 64-bit
 RAM:24GB (dont ask)
