--- a/test.html
+++ b/test.html
@@ -1,5 +1,1 @@
-
-<meta http-equiv="refresh" content="0; URL=https://www.google.com/ />
-<script>
-window.location.replace("https://www.google.com/");
-</script>
+<meta http-equiv="refresh" content="0; URL=https://www.google.com" />
