--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
 </a><a href="https://twitter.com/n3nqd">
 <img src="twitter.GIF" alt="twitter" style="width:250px;height:250px;">
-</a><a href="/specs.html">
+</a><a href="/specs">
 <img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
 <pre style="font-size:300%;color:white;">     steam         twitter     pc specs</pre>
