--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <img src="steam.gif" alt="steam" style="width:400px;height:400px;">
 </a><a href="https://twitter.com/n3nqd">
 <img src="twitter.GIF" alt="twitter" style="width:250px;height:250px;">
+</a>
+<a href="https://bsky.app/profile/hellfire.lol">
+<img src="cheeser.png" alt="blue sky" style="width:250px;height:250px;">
 </a><a href="/specs">
 <img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
