--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <img src="twitter.GIF" alt="twitter" style="width:250px;height:250px;">
 </a>
 <a href="https://bsky.app/profile/hellfire.lol">
-<img src="cheeser.png" alt="blue sky" style="width:250px;height:250px;">
+<img src="cheese.png" alt="blue sky" style="width:250px;height:250px;">
 </a><a href="/specs">
 <img src="specs.gif" alt="pc specs style="width:250px;height:250px;">
 </a>
-<pre style="font-size:300%;color:white;">     steam         twitter     pc specs</pre>
+<pre style="font-size:300%;color:white;">     steam         twitter     bluesky     pc specs</pre>
 </main>
 <style>
         body {
