--- a/specs.html
+++ b/specs.html
@@ -1,17 +1,73 @@
 <!DOCTYPE html>
-<title>best pc in yugoslavia</title>
-<link href="icon.jpg" rel="icon">
-<img src="pc.gif" alt="real pc lol">
-<pre style="color:white;font-size:350%;">CPU:AMD Ryzen 7 5700G
-GPU:ASUS TUF RTX 3060 TI
-OS:Windows 11 Pro 64-bit
-RAM:24GB (dont ask)
-MOBO:Gigabyte B450M H</pre>
-<a href="/" style="color:white;font-size:300%;">nah bruh</a>
-<style>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="pc specs">
+    <title>pc specs</title>
+    <link href="icon.jpg" rel="icon">
+
+    <style>
         body {
-            font-family:Arial;
-            background: #000000;
-            color: cock;
-}
-              <style>
+            background-color: #000; /* Black background */
+            color: #fff; /* White text */
+            font-family: Arial, sans-serif;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center; /* Horizontally center the content */
+            align-items: center; /* Vertically center the content */
+            height: 100vh; /* Make the body take up the full viewport height */
+            text-align: center; /* Center all text */
+        }
+
+        .content {
+            padding: 20px;
+            max-width: 600px; /* Limit the width of the content */
+            width: 100%;
+        }
+
+        h1 {
+            color: #fff;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+
+        p {
+            font-size: 1.2em;
+            margin: 10px 0;
+        }
+
+        footer {
+            margin-top: 40px;
+            font-size: 0.9em;
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="content">
+
+        <img src="https://hellfire.lol/pc.gif" alt="Random Image" class="random-image">
+
+        <h1>PC SPECS</h1>
+
+        <p><strong>CPU:</strong> AMD Ryzen 7 5700G</p>
+        <p><strong>GPU:</strong> NVIDIA GeForce RTX 3060 TI</p>
+        <p><strong>RAM:</strong> 24GB DDR4 3200MHz</p>
+        <p><strong>Storage:</strong> 1TB NVMe SSD</p>
+        <p><strong>Motherboard:</strong> Gigabyte B450M H</p>
+
+    </div>
+
+</body>
+</html>
