--- a/specs.html
+++ b/specs.html
@@ -9,21 +9,21 @@
 
     <style>
         body {
-            background-color: #000; /* Black background */
-            color: #fff; /* White text */
+            background-color: #000; 
+            color: #fff; 
             font-family: Arial, sans-serif;
             padding: 0;
             margin: 0;
             display: flex;
-            justify-content: center; /* Horizontally center the content */
-            align-items: center; /* Vertically center the content */
-            height: 100vh; /* Make the body take up the full viewport height */
-            text-align: center; /* Center all text */
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            text-align: center;
         }
 
         .content {
             padding: 20px;
-            max-width: 600px; /* Limit the width of the content */
+            max-width: 600px;
             width: 100%;
         }
 
@@ -66,6 +66,7 @@
         <p><strong>RAM:</strong> 24GB DDR4 3200MHz</p>
         <p><strong>Storage:</strong> 1TB NVMe SSD</p>
         <p><strong>Motherboard:</strong> Gigabyte B450M H</p>
+        <a href="javascript:history.back()" class="back-link">back to links</a>
 
     </div>
 
