--- a/specs.html
+++ b/specs.html
@@ -57,7 +57,7 @@
 
     <div class="content">
 
-        <img src="https://hellfire.lol/pc.gif" alt="Random Image" class="random-image">
+        <img src="https://hellfire.lol/pc.gif" alt="live pc pic" class="image">
 
         <h1>PC SPECS</h1>
 
