--- a/specs.html
+++ b/specs.html
@@ -66,7 +66,7 @@
         <p><strong>RAM:</strong> 24GB DDR4 3200MHz</p>
         <p><strong>Storage:</strong> 1TB NVMe SSD</p>
         <p><strong>Motherboard:</strong> Gigabyte B450M H</p>
-        <a href="javascript:history.back()" class="back-link">back to links</a>
+        <a href="https://hellfire.lol" class="back-link">back to links</a>
 
     </div>
 
