--- a/index.html
+++ b/index.html
@@ -1,125 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="links and shit.">
-    <title>links and shit</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Links And Setup</title>
+  <link rel="icon" href="icon.jpg" type="icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <style>
+body {
+  font-family: Arial, sans-serif;
+  background: #1e1e1e;
+  color: #f5f5f5;
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
-    <link rel="icon" href="icon.jpg" type="icon">
+    .social-icons {
+      margin-bottom: 30px;
+    }
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    .social-icons a {
+      color: #f5f5f5;
+      margin: 0 20px;
+      font-size: 40px;
+      transition: color 0.3s ease;
+    }
 
-    <style>
-        /* General Reset */
-        body, h1, p, a, img {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-        }
+    .social-icons a:hover {
+      color: #1da1f2; /* Twitter blue */
+    }
 
-        body {
-            background-color: #000; /* Black background */
-            color: #fff; /* White text */
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            font-size: 18px;
-        }
+    .social-icons a.steam:hover {
+      color: #00aaff; /* Blue for Steam on hover */
+    }
 
-        h1 {
-            font-size: 3em;
-            color: #fff; /* White text */
-            margin-bottom: 15px;
-            font-weight: bold;
-        }
+    .pc-specs {
+      background: #2c2c2c;
+      display: inline-block;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: left;
+    }
 
-        p {
-            font-size: 1.2em;
-            color: #ddd; /* Lighter gray text for readability */
-            margin-bottom: 30px;
-        }
+    .pc-specs h2 {
+      margin-top: 0;
+      border-bottom: 2px solid #555;
+      padding-bottom: 10px;
+    }
 
-        /* Centered Social Links Container */
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: wrap;
-        }
+    .pc-specs ul {
+      list-style-type: none;
+      padding: 0;
+    }
 
-        .social-link {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            display: inline-block;
-            cursor: pointer;
-            overflow: hidden;
-        }
-
-        .social-link img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 50%;
-            filter: grayscale(100%); /* Black and white icons */
-            transition: filter 0.3s ease;
-        }
-
-        .social-link:hover img {
-            filter: grayscale(0%); /* Colorize on hover */
-            transform: scale(1.1);
-            box-shadow: 0px 8px 20px rgba(255, 255, 255, 0.2); /* Light shadow on hover */
-        }
-
-        /* Audio Controls hidden by default */
-        audio {
-            display: none;
-        }
-
-        /* Footer */
-        .footer {
-            position: absolute;
-            bottom: 20px;
-            font-size: 0.9em;
-            color: #888; /* Slightly lighter gray for footer text */
-        }
-
-    </style>
+    .pc-specs li {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
 
-    <img src="https://hellfire.lol/steam.gif" alt="me" style="border-radius: 10px; margin-bottom: 20px;">
+  <div class="social-icons">
+    <a href="https://x.com/n3nqd" target="_blank"><i class="fab fa-twitter"></i></a>
+    <a href="https://steamcommunity.com/id/n3nqd" target="_blank" class="steam"><i class="fab fa-steam"></i></a>
+  </div>
 
-    <p>follow me or look at my pc specs:</p>
-
-    <div class="social-links">
-        <!-- Steam -->
-        <a href="https://steamcommunity.com/id/n3nqd" class="social-link" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/8/83/Steam_icon_logo.svg" alt="Steam">
-        </a>
-
-        <!-- Twitter -->
-        <a href="https://x.com/n3nqd" class="social-link" target="_blank">
-            <img src="https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-512.png" alt="Twitter">
-        </a>
-
-        <!-- BlueSky -->
-        <a href="https://bsky.app/profile/hellfire.lol" class="social-link" target="_blank">
-            <img src="https://cdn.bsky.app/img/avatar/plain/did:plc:z72i7hdynmk6r22z27h6tvur/bafkreihagr2cmvl2jt4mgx3sppwe2it3fwolkrbtjrhcnwjk4jdijhsoze@jpeg" alt="BlueSky">
-        </a>
-
-        <!-- Specs -->
-        <a href="/specs" class="social-link" target="_blank">
-            <img src="https://static-00.iconduck.com/assets.00/computer-icon-1024x1024-q34qlzrf.png" alt="Specs">
-        </a>
-    </div>
-
-
+  <div class="pc-specs">
+    <h2>PC Specifications</h2>
+    <ul>
+      <li><strong>CPU:</strong> AMD Ryzen 7 5700G</li>
+      <li><strong>GPU:</strong> NVIDIA GeForce RTX 3060 TI</li>
+      <li><strong>RAM:</strong> 24GB DDR4</li>
+      <li><strong>Storage:</strong> 1TB NVMe SSD + 1TB SSD</li>
+      <li><strong>Motherboard:</strong> B450M-H</li>
+    </ul>
+  </div>
 </body>
 </html>
