--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <style>
 body {
   font-family: Arial, sans-serif;
-  background: #1e1e1e;
-  color: #f5f5f5;
+  background-image: url('background.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
   margin: 0;
   height: 100vh;
   display: flex;
@@ -19,31 +22,35 @@ body {
   flex-direction: column;
 }
 
+
+
     .social-icons {
       margin-bottom: 30px;
     }
 
     .social-icons a {
-      color: #f5f5f5;
+      color: #000000;
       margin: 0 20px;
       font-size: 40px;
       transition: color 0.3s ease;
     }
 
     .social-icons a:hover {
-      color: #1da1f2; /* Twitter blue */
+      color: #1da1f2;
     }
 
     .social-icons a.steam:hover {
-      color: #00aaff; /* Blue for Steam on hover */
+      color: #00aaff;
     }
 
     .pc-specs {
-      background: #2c2c2c;
+      background: rgba(0, 0, 0, 0.5);
       display: inline-block;
       padding: 20px;
       border-radius: 10px;
       text-align: left;
+      color: white;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
     }
 
     .pc-specs h2 {
