--- a/index.html
+++ b/index.html
@@ -24,16 +24,24 @@ body {
 
 
 
-    .social-icons {
-      margin-bottom: 30px;
-    }
+.social-icons {
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  display: inline-flex;          
+  padding: 10px 10px;            
+  gap: 20px;                    
+    margin-bottom: 10px;
+}
 
-    .social-icons a {
-      color: #000000;
-      margin: 0 20px;
-      font-size: 80px;
-      transition: color 0.3s ease;
-    }
+.social-icons a {
+  color: #000000;
+  font-size: 80px;
+  transition: color 0.3s ease;
+  padding: 0;                   
+  margin: 0;                  
+  display: inline-flex;         
+  text-decoration: none;
+}
 
     .social-icons a:hover {
       color: #1da1f2;
