--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 }
 
 .social-icons a {
-  color: #000000;
+  color: #ffffff;
   font-size: 80px;
   transition: color 0.3s ease;
   padding: 0;                   
