--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ body {
 }
 
     .social-icons a:hover {
-      color: #1da1f2;
+      color: #000000;
     }
 
     .social-icons a.steam:hover {
-      color: #00aaff;
+      color: #000000;
     }
 
     .pc-specs {
